Cherry-pick 262664@main (2b34340acfdb). https://bugs.webkit.org/show_bug.cgi?id=254758

Fix build with GCC 13 -Werror
    https://bugs.webkit.org/show_bug.cgi?id=254758

    Reviewed by Adrian Perez de Castro.

    This allows building with GCC 13 in DEVELOPER_MODE (where warnings are
    now fatal).

    * Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:
    (JSC::BytecodeGenerator::BytecodeGenerator):
    * Source/JavaScriptCore/heap/AbstractSlotVisitorInlines.h:
    (JSC::AbstractSlotVisitor::ReferrerContext::ReferrerContext):
    * Source/WebCore/animation/DocumentTimeline.cpp:
    (WebCore::DocumentTimeline::animationCanBeRemoved):
    * Source/WebCore/platform/animation/TimingFunction.h:
    * Source/WebCore/platform/graphics/AudioTrackPrivate.h:
    (WebCore::AudioTrackPrivate::operator== const):
    * Source/WebCore/platform/graphics/InbandTextTrackPrivate.h:
    (WebCore::InbandTextTrackPrivate::operator== const):
    * Source/WebCore/platform/graphics/TrackPrivateBase.h:
    * Source/WebCore/platform/graphics/VideoTrackPrivate.h:
    (WebCore::VideoTrackPrivate::operator== const):
    * Source/WebCore/style/ElementRuleCollector.cpp:
    (WebCore::Style::leftToRightDeclaration):
    (WebCore::Style::rightToLeftDeclaration):
    * Source/WebCore/svg/SVGPathSeg.h:
    * Source/bmalloc/libpas/src/libpas/pas_fast_megapage_table.c:
    (pas_fast_megapage_table_set_by_index):
    * Tools/TestWebKitAPI/Tests/WTF/BoxPtr.cpp:
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WTF/CompactRefPtr.cpp:
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WTF/NakedPtr.cpp:
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WTF/PackedRefPtr.cpp:
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WTF/RefPtr.cpp:
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/262664@main