Source/WebCore/platform/graphics/TrackPrivateBase.h
@@ -66,7 +66,7 @@ public:
             client->willRemove();
     }
     
-    virtual bool operator==(const TrackPrivateBase&) const;
+    bool operator==(const TrackPrivateBase&) const;
 
 #if !RELEASE_LOG_DISABLED
     virtual void setLogger(const Logger&, const void*);
